# project1

./: .gitignore  JustAFile  README.md  TestProject.rar
src/: index.html
src-tauri/: Cargo.toml  README.md  build.rs  package.json  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
tauri_acrylic_app/: README.md
tauri_acrylic_app/src/: index.html
tauri_acrylic_app/src-tauri/: Cargo.toml  tauri.conf.json
tauri_acrylic_app/src-tauri/src/: commands.rs  main.rs
