--- tauri_acrylic_app/src-tauri/Cargo.toml (原始)


+++ tauri_acrylic_app/src-tauri/Cargo.toml (修改后)
[package]
name = "tauri-acrylic-app"
version = "0.1.0"
description = "Tauri v2 app with acrylic window effect"
authors = ["You"]
edition = "2021"

[lib]
name = "tauri_acrylic_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls"
]}

[package.metadata.windows]
target-arch = "x86_64"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
